plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'maven-publish'
}

group = 'com.github.merge-simpson'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    // implementation 'org.springframework:spring-web' // common (not determined on webmvc, webflux, ...)
    implementation 'org.springframework:spring-webmvc' // webmvc (including "spring-web")
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'com.fasterxml.jackson.core:jackson-annotations'
    implementation 'org.slf4j:slf4j-api'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
}

publishing {
    publications {
        mavenJava(MavenPublication){
            // jar is the default build task configured by Spring Boot if bootJar=false
            artifact bootJar
        }
    }
}

bootJar {
    enabled = true
}

compileJava {
//    options.compilerArgs += ['--enable-preview']
}

compileTestJava {
//    options.compilerArgs += ['--enable-preview']
}

test {
    useJUnitPlatform()
//    jvmArgs(['--enable-preview'])
}
